Configurable connection between UERANSIM and CNFs.
- Added kubernetes services, to which the UERANSIM can connect.
- Configurable parameters to select connectivity (provider / service).
- Dcoumentation update.

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: I83f49605ec8ceeb90acf5fd0b06c55b7736bf1da

--- a/Charts/f5gc-amf/templates/configmap.yaml
+++ b/Charts/f5gc-amf/templates/configmap.yaml
@@ -11,7 +11,7 @@ data:
     configuration:
       amfName: AMF
       ngapIpList:
-        - 172.16.24.3                 # assigned to a second network interface
+{{ .Values.ngapIPs | toYaml | indent 8 }}             # assigned to a second network interface
       sbi:
         scheme: {{ .Values.configuration.sbi.scheme }}
         registerIPv4: {{ .Values.configuration.sbi.registerIPv4 }}         # Can also be a kubernetes service IP or domain name.
