--- a/Charts/f5gc-amf/templates/service.yaml
+++ b/Charts/f5gc-amf/templates/service.yaml
@@ -16,3 +16,22 @@ spec:
 {{- end }}
   selector:
     app: f5gc-amf
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: f5gc-amf-ngap
+  labels:
+    app: f5gc-amf
+spec:
+  type: {{ .Values.service.type }}
+  ports:
+  - name: f5gc-amf-n2
+    port: 38412
+{{- if eq .Values.service.type "NodePort" }}
+    nodePort: 31412
+{{- end }}
+    protocol: SCTP
+  selector:
+    app: f5gc-amf
